--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="kr.hs.emirim.dbwlsdud0407.myapp.MainActivity"
+    tools:context=".ImageActivity"
     android:orientation="vertical">
  <LinearLayout
         android:layout_width="230dp"
